<resources>
    <string name="app_name">Get Me Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_settings">this is the settings page</string>

    <!-- Title    -->
    <string name="gmo">GET ME OUT</string>

    <string name="settings_btn">SETTINGS</string>
    <string name="send_btn">SEND</string>

    <!-- Settings Page -->
    <string name="select_contacts_btn">CONTACTS</string>
    <string name="send_location_btn">LOCATION</string>
    <string name="edit_messages_btn">MESSAGES</string>
    <string name="fake_call_btn">Fake Call</string>

    <!--Edit Contacts Page    -->
    <string name="add">Add</string>
    <string name="del">Delete</string>
    <string name="edit">Edit</string>
    <string name="imp">Import</string>

    <!-- Placeholder strings  -->
    <string name="fname">First</string>
    <string name="lname">Last</string>
    <string name="number">Number</string>
    <string name="Hello">Hello</string>

</resources>
