<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lname"
        app:layout_constraintBottom_toBottomOf="@+id/item_firstname"
        app:layout_constraintStart_toEndOf="@+id/item_firstname"
        app:layout_constraintTop_toTopOf="@+id/item_firstname" />

    <TextView
        android:id="@+id/item_phoneno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="@+id/item_firstname"
        app:layout_constraintTop_toBottomOf="@+id/item_firstname" />
</androidx.constraintlayout.widget.ConstraintLayout>