<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_blue1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contacts_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/contacts_recyclerview"
            app:layout_constraintStart_toStartOf="@+id/contacts_recyclerview"
            app:layout_constraintTop_toBottomOf="@+id/contacts_recyclerview">

            <Button
                android:id="@+id/import_contacts_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/imp"
                app:layout_constraintStart_toEndOf="@+id/edit_contact_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/edit"
                app:layout_constraintStart_toEndOf="@+id/del_contact_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/del_contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/del"
                app:layout_constraintStart_toEndOf="@+id/add_contact_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>