<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient">

        <Button
            android:id="@+id/select_contacts_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_btn"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/select_contacts_btn"
            android:textColor="#FFFFFF"
            android:textSize="36sp"/>

        <Button
            android:id="@+id/edit_messages_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_btn"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/edit_messages_btn"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="48dp" />

        <Button
            android:id="@+id/location_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_btn"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/send_location_btn"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="96dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:drawableEnd="@drawable/ic_location_on_white_36dp"/>

    </LinearLayout>
</layout>