<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/add_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_buttom"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/del_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_buttom"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/edit_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_buttom"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>